# scrapemonster-assignment

./: README.md  justfile  pyproject.toml  requirements.txt
data/: products-temp.jsonl  products1.jsonl  products2.jsonl  products3.jsonl
src/scrapemonster/: crawlers.py
