[project]
name = "scrapemonster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "lxml>=5.3.1",
    "playwright>=1.50.0",
    "prefect>=3.2.7",
    "toolz>=1.0.0",
]

[dependency-groups]
dev = [
    "icecream>=2.1.4",
    "ipython>=8.32.0",
    "nest-asyncio>=1.6.0",
    "rich>=13.9.4",
    "wat-inspector>=0.4.3",
]
